# conan-fftw

./: .gitignore  CMakeLists.txt  build.py  conanfile.py  config.h.cmake  config.h.cmaketemplate
test/: CMakeLists.txt  conanfile.py  test.cpp
